<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.usb.pss</groupId>
		<artifactId>pss</artifactId>
		<version>0.0.1</version>
	</parent>

	<artifactId>ipa-service</artifactId>
	<version>0.0.1</version>
	<name>ipa-service</name>
	<description>Inventory, Pricing and Admin Service for PSS</description>

	<properties>
		<java.version>17</java.version>
	</properties>

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
